// Vitest Snapshot v1

exports[`preprocessor > phosphorSvelteOptimize > should preprocess icon imports 1`] = `
{
  "code": "<script>
  import Airplane from \\"phosphor-svelte/lib/Airplane\\";
  import Cube from \\"phosphor-svelte/lib/Cube\\";
  import Rectangle from \\"phosphor-svelte/lib/Rectangle\\";
  import Horse from \\"phosphor-svelte/lib/Horse\\";
</script>
",
  "dependencies": [],
  "map": SourceMap {
    "mappings": "AAAA,CAAC,MAAM,CCAP;AACA;AACA;AAAA;AAAA,gDAA2D;ADC3D,CAAC,CAAC,MAAM;",
    "names": [],
    "sources": [
      "App.svelte",
      "",
    ],
    "version": 3,
  },
  "toString": [Function],
}
`;

exports[`preprocessor > phosphorSvelteOptimize > should preprocess multiple imports 1`] = `
{
  "code": "<script>
  import Airplane from \\"phosphor-svelte/lib/Airplane\\";
  import Gear from \\"phosphor-svelte/lib/Gear\\";
  import Cube from \\"phosphor-svelte/lib/Cube\\";
  import Rectangle from \\"phosphor-svelte/lib/Rectangle\\";
  import Horse from \\"phosphor-svelte/lib/Horse\\";
  import X from \\"phosphor-svelte/lib/X\\";
</script>
",
  "dependencies": [],
  "map": SourceMap {
    "mappings": "AAAA,CAAC,MAAM,CCAP;AACA;AAAA,8CAAmD;AACnD;AAAA;AAAA,gDAA2D;AAC3D,wCAAsC;ADCtC,CAAC,CAAC,MAAM;",
    "names": [],
    "sources": [
      "App.svelte",
      "",
    ],
    "version": 3,
  },
  "toString": [Function],
}
`;

exports[`preprocessor > phosphorSvelteOptimize > should separate type imports 1`] = `
{
  "code": "<script lang=\\"ts\\">
  import Airplane from \\"phosphor-svelte/lib/Airplane\\";
  import Gear from \\"phosphor-svelte/lib/Gear\\";
  import type { IconContextProps } from \\"phosphor-svelte\\";
</script>
",
  "dependencies": [],
  "map": SourceMap {
    "mappings": "AAAA,CAAC,MAAM,CAAC,IAAI,CAAC,CAAC,EAAE,CAAC,CCAjB;AACA;AAAA;AAAA,0DAA0E;ADC1E,CAAC,CAAC,MAAM;",
    "names": [],
    "sources": [
      "App.svelte",
      "",
    ],
    "version": 3,
  },
  "toString": [Function],
}
`;
